# watchX_Blocks

./: .codeed2  .codeed3  .gitignore  CHANGELOG.md  Changelog.md  LICENSE.txt  README.md  TODO.md  appmenu.js  cfgconst.js  cfghelper.js  codeed.progs  config.json  latest  main.js  package.json  projectlocator.js  servercfg.js  servermgr.js  start.py  start_build.sh  start_server.sh  watchX_Blocks.wpd
ardublockly/: ardublockly.css  ardublockly.js  ardublockly_blockly.js  ardublockly_toolbox.js  index.html
ardublocklyserver/: compilersettings.py
blockly/: .codeed.conf  arduino_compressed.js  blockly_compressed.js  blockly_uncompressed.js  blocks_compressed.js  build.py  dart_compressed.js  javascript_compressed.js  lua_compressed.js  php_compressed.js  python_compressed.js
build_script/: builder.js  pack.js  pack_dmg.js  pack_msi.js  pack_osx.js  pack_win32.js  pack_win64.js  pack_wstore.js  remove_cache.bat  remove_cache.sh  upload-server.sh
client/: blocks_data.json  index.html  splash.html  watchXBlocks.css  watchXBlocks.js  watchXBlocks_blockly.js  watchXBlocks_design.js  watchXBlocks_desktop.js  watchXBlocks_lang.js  watchXBlocks_splash.js  watchXBlocks_staff.js  watchXBlocks_ui.js  watchXServer_ajax.js
dictionary/: dictionary_en.html  dictionary_en.md  index.html  watchXBlocksDictionary.md  watchXBlocks_dictionary_en.md
examples/: watch_face.xml  (+4 more)
watchX/: Adafruit_ATParser.h  Adafruit_BMP280.h  Adafruit_BluefruitLE_SPI.h  Adafruit_BluefruitLE_UART.h  CMakeLists.txt  MLX90393.cpp  PinChangeInterrupt0.cpp  avr-toolchain.cmake  oled.cpp  watchX.cpp  watchX.h
(+205 files in other folders)
